syntax = "proto3";

package auth;

option go_package = "authpb";

message AuthRequest {
    string first_name = 1;
    string password = 2;
}

message AuthResponse {
    string access_token = 1;
    string refresh_token = 2;
}