package server

import (
	"context"
	"log"
	"net"

	"github.com/Hanasou/Microservices/users-service/src/authpb"
	"github.com/Hanasou/Microservices/users-service/src/core"
	"github.com/Hanasou/Microservices/users-service/src/database"
	"google.golang.org/grpc"
)

type server struct{}

// Decouple the core logic from the APIs

// CreateUser sends a request to make a user into the database and returns tokens for authentication
func (*server) CreateUser(ctx context.Context, req *authpb.CreateUserRequest) (*authpb.CreateUserResponse, error) {
	username := req.GetUsername()
	password := req.GetPassword()

	err := database.AddUserToMongoDb(ctx, username, password)
	if err != nil {
		log.Println("Error in adding user to db")
		return nil, err
	}

	accessToken, refreshToken, err := core.GenTokens(username)
	if err != nil {
		log.Println("Error in token generation")
		return nil, err
	}
	response := &authpb.CreateUserResponse{
		Tokens: &authpb.AuthResponse{
			AccessToken:  accessToken,
			RefreshToken: refreshToken,
		},
	}
	return response, nil
}

// Auth generates an AuthResponse from an AuthRequest
func (*server) Auth(ctx context.Context, req *authpb.AuthRequest) (*authpb.AuthResponse, error) {
	username := req.GetUsername()
	password := req.GetPassword()

	// Verify Password
	user, err := database.GetUserFromMongoDb(ctx, username)
	if err != nil {
		log.Println("Error in getting user")
		return nil, err
	}

	if _, err = core.CheckPassword(password, user.PasswordHash); err != nil {
		log.Println("Passwords do not match")
		return nil, err
	}

	accessToken, refreshToken, err := core.GenTokens(username)
	if err != nil {
		log.Println("Error in Auth: Could not generate tokens")
		return nil, err
	}

	response := &authpb.AuthResponse{
		AccessToken:  accessToken,
		RefreshToken: refreshToken,
	}
	return response, nil
}

func (*server) Refresh(ctx context.Context, req *authpb.RefreshRequest) (*authpb.RefreshResponse, error) {
	username := req.GetUsername()
	refreshToken := req.GetRefreshToken()

	// TODO: Verify refresh token
	jwtKey, err := core.VerifyToken(refreshToken)
	if err != nil {
		log.Println("Error in verifying token")
		return nil, err
	}
	accessToken, err := core.RefreshToken(username, jwtKey)
	if err != nil {
		log.Println("Error in Refresh: Could not get new access token")
		return nil, err
	}

	response := &authpb.RefreshResponse{
		AccessToken: accessToken,
	}
	return response, nil
}

// BootstrapServer sets up our gRPC server
func BootstrapServer() (*net.Listener, *grpc.Server, error) {
	lis, err := net.Listen("tcp", "0.0.0.0:50051")
	if err != nil {
		log.Fatalln("Failed to listen", err)
	}
	log.Println("Connection established")

	// New server
	s := grpc.NewServer()
	// Register the service
	// This is defined in the autogenerated code
	// Right now we're just using an empty server struct, we'll add stuff to it later
	authpb.RegisterAuthServiceServer(s, &server{})

	// Start the server in a seperate goroutine
	go func() {
		log.Println("Server established. Accepting requests.")
		if err := s.Serve(lis); err != nil {
			log.Fatalln("Failed to serve", err)
		}
	}()

	return &lis, s, nil
}
